--- a/sass/home.scss
+++ b/sass/home.scss
@@ -110,10 +110,13 @@ body{
                     }
 
                 }
-
                 
             }
+        }
 
+        div.attribution{
+            position: absolute;
+            bottom: 0;
         }
     }
 
